--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" href="/style/home.css">
 	<link rel="stylesheet" href="/style/how-stopcard-works.css">
 	<link rel="stylesheet" href="/style/links.css">
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script type="text/javascript" src="/scripts/modernizr.js"></script>
 	<!--[if !IE]><!-->
 	<script>
