--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<meta name="viewport" id="view" content="width=device-width,initial-scale=1.0, user-scalable = no, minimum-scale=1.0, maximum-scale=1.0">
 	<title>Stopcard</title>
-	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+	<link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" href="/style/all.css">
 	<link rel="stylesheet" href="/style/be-secure-with-a-stopcard.css">
 	<link rel="stylesheet" href="/style/clients.css">
